# us-marine-energy-resource-python

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  README.qmd  pyproject.toml
.github/workflows/: publish.yml  render-readme.yml  tests.yml
data/h2o_wave_hindcast_index/v1/: nodes_Alaska_v1.parquet  nodes_Atlantic_v1.parquet  nodes_CNMI_and_Guam_v1.parquet  nodes_Gulf_of_Mexico_and_Puerto_Rico_v1.parquet  nodes_Hawaii_v1.parquet  nodes_West_Coast_v1.parquet
scripts/: build_geometry_data.py  build_wave_node_index.py
tests/: __init__.py  conftest.py  test_config.py
tests/integration/: conftest.py  test_analysis.py  test_data_access.py  test_viz.py  test_wave.py
tests/unit/: conftest.py  test_cli_palette.py  test_config.py  test_explore_catalog.py  test_explore_cli.py  test_explore_complete.py  test_explore_config.py  test_explore_core.py  test_explore_sources.py  test_explore_volume.py  test_gis.py  test_wave_cli.py  test_wave_config.py  test_wave_hindcast.py  test_wave_index.py  test_wave_index_build.py  test_wave_nlr_archive.py  test_wave_nlr_backend.py  test_wave_nlr_client.py  test_wave_nodes.py  test_wave_s3_backend.py  test_wave_s3_bucket.py
us_marine_energy_resource/: __init__.py  _spatial.py  cache.py  config.py  gis.py  manifest.py  mer.py  query.py  tidal_hindcast.py
us_marine_energy_resource/analysis/: __init__.py  preprocessing.py  resource.py
us_marine_energy_resource/cli/: __init__.py  _display.py  _download.py  _geometry.py  _links.py  _options.py  _run.py  app.py  sources.py  wave.py
us_marine_energy_resource/data/: data_index.json  domain_extents_v1.parquet  domain_footprints_v1.geojson  h2o_wave_hindcast_index_registry_v1.txt  h2o_wave_hindcast_index_v1.json  location_bounds_v1.0.0.parquet
us_marine_energy_resource/explore/: __init__.py  blockio.py  budget.py  catalog.py  config.py  errors.py  lazy.py  model.py  protocols.py  selection.py  sniff.py  sources.py
us_marine_energy_resource/explore/cli/: __init__.py  _shared.py  complete.py  download.py  explore.py  info.py  ls.py  options.py  render.py
us_marine_energy_resource/explore/formats/: __init__.py  _stats.py  hdf5.py  parquet.py
us_marine_energy_resource/viz/: __init__.py  _style.py  settings.py
us_marine_energy_resource/viz/tidal/: __init__.py  _components.py  comparison.py  dashboard.py  energy.py  exceedance.py  harmonic.py  joint_probability.py  polar.py  profiles.py  sigma.py  time_series.py
us_marine_energy_resource/wave_hindcast/: __init__.py  _store.py  backend.py  config.py  domains.py  errors.py  hindcast.py  index.py  index_build.py  nodes.py
us_marine_energy_resource/wave_hindcast/nlr_api/: __init__.py  archive.py  backend.py  client.py
us_marine_energy_resource/wave_hindcast/s3_direct/: __init__.py  backend.py  bucket.py
